this commit is very important as I implement DDD architecture to make backend for movie application. CLean architecture with api implementation.

--- a/src/Fullstack.API/Fullstack.API.csproj
+++ b/src/Fullstack.API/Fullstack.API.csproj
@@ -17,4 +17,10 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Fullstack.Application\Fullstack.Application.csproj" />
+    <ProjectReference Include="..\Fullstack.Domain\Fullstack.Domain.csproj" />
+    <ProjectReference Include="..\Fullstack.Infrastructure\Fullstack.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
