implementing ful authentication with jwt, role base auth

--- a/src/Fullstack.Application/Fullstack.Application.csproj
+++ b/src/Fullstack.Application/Fullstack.Application.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Fullstack.Infrastructure\Fullstack.Infrastructure.csproj" />
+    <ProjectReference Include="..\Fullstack.Domain\Fullstack.Domain.csproj" />
   </ItemGroup>
 
 </Project>
