--- a/src/Fullstack.Infrastructure/Fullstack.Infrastructure.csproj
+++ b/src/Fullstack.Infrastructure/Fullstack.Infrastructure.csproj
@@ -8,12 +8,16 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNet.WebPages" Version="3.3.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.8" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.8" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.8" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="9.0.8" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.35.0" />
     <PackageReference Include="WebGrease" Version="1.6.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Fullstack.Application\Fullstack.Application.csproj" />
     <ProjectReference Include="..\Fullstack.Domain\Fullstack.Domain.csproj" />
   </ItemGroup>
 
